@@ -1,5 +1,6 @@
 Changes for 1.6.6
 
+ - [ZBX-993] fixed possible vulnerability of trapper (Sasha)
  - [ZBX-964] added check on item in trigger expression (Artem)
  - [ZBX-987] fixed shutting down server/proxy after connection lost to remote mysql server (Sasha)
  - [ZBX-809] fixed memory leak while processing perf_counter metric under Windows (Sasha)
